local/logs/project.log
2018-11-04T06:29:08.751Z - normal: Load ~/.CocosCreator/settings.json
2018-11-04T06:29:08.754Z - normal: checking language setting...
2018-11-04T06:29:08.754Z - normal: Language: zh
2018-11-04T06:29:09.249Z - success: protocol editor-framework registered
2018-11-04T06:29:09.250Z - success: protocol app registered
2018-11-04T06:29:09.250Z - success: protocol theme registered
2018-11-04T06:29:09.250Z - success: protocol packages registered
2018-11-04T06:29:09.251Z - success: protocol unpack registerred
2018-11-04T06:29:09.251Z - success: protocol disable-commonjs registerred
2018-11-04T06:29:09.463Z - normal: connected!
2018-11-04T06:29:09.466Z - normal: Check project /Users/upbins/CodeProject/CreatorProject/HardestGame
2018-11-04T06:29:09.469Z - normal: Initializing project /Users/upbins/CodeProject/CreatorProject/HardestGame
2018-11-04T06:29:09.472Z - normal: Initializing Cocos2d
2018-11-04T06:29:10.149Z - normal: Initializing Asset Database
2018-11-04T06:29:10.184Z - success: protocol uuid registerred
2018-11-04T06:29:10.185Z - success: protocol db registerred
2018-11-04T06:29:10.185Z - success: protocol thumbnail registerred
2018-11-04T06:29:10.185Z - normal: Loading editor/builtin packages
2018-11-04T06:29:10.325Z - success: assets loaded
2018-11-04T06:29:10.332Z - success: builder loaded
2018-11-04T06:29:10.335Z - success: cocos-analytics loaded
2018-11-04T06:29:10.340Z - success: console loaded
2018-11-04T06:29:10.373Z - success: fb-instant-games loaded
2018-11-04T06:29:10.378Z - success: hierarchy loaded
2018-11-04T06:29:10.382Z - success: inspector loaded
2018-11-04T06:29:10.384Z - success: keystore loaded
2018-11-04T06:29:10.391Z - success: node-library loaded
2018-11-04T06:29:10.394Z - success: package-asset loaded
2018-11-04T06:29:10.395Z - success: preferences loaded
2018-11-04T06:29:10.399Z - success: project-exporter loaded
2018-11-04T06:29:10.413Z - success: project-importer loaded
2018-11-04T06:29:10.416Z - success: project-settings loaded
2018-11-04T06:29:10.421Z - success: ui-kit loaded
2018-11-04T06:29:10.425Z - success: scene loaded
2018-11-04T06:29:10.426Z - success: sprite-editor loaded
2018-11-04T06:29:10.431Z - success: store loaded
2018-11-04T06:29:10.436Z - success: timeline loaded
2018-11-04T06:29:10.436Z - normal: Loading builtin packages
2018-11-04T06:29:10.445Z - success: asset-db-debugger loaded
2018-11-04T06:29:10.446Z - success: color-picker loaded
2018-11-04T06:29:10.448Z - success: jsb-adapter loaded
2018-11-04T06:29:10.452Z - success: package-manager loaded
2018-11-04T06:29:10.558Z - success: qqplay-adapter loaded
2018-11-04T06:29:10.565Z - success: sdkbox loaded
2018-11-04T06:29:10.571Z - success: tester loaded
2018-11-04T06:29:10.576Z - success: ui-grid loaded
2018-11-04T06:29:10.580Z - success: ui-kit-preview-extra loaded
2018-11-04T06:29:10.584Z - success: ui-kit-preview loaded
2018-11-04T06:29:10.588Z - success: ui-tree loaded
2018-11-04T06:29:10.589Z - success: weapp-adapter loaded
2018-11-04T06:29:11.520Z - normal: Loading packages
2018-11-04T06:29:11.527Z - normal: Watching packages
2018-11-04T06:29:11.584Z - normal: Run Application
2018-11-04T06:29:12.165Z - success: preview server running at http://localhost:7456
2018-11-04T07:00:59.457Z - failed: [db-task][sync-changes] Failed to import asset /Users/upbins/CodeProject/CreatorProject/HardestGame/assets/scripts/game.js.js, message: Compile error: SyntaxError: /Users/upbins/CodeProject/CreatorProject/HardestGame/assets/scripts/game.js.js: Unexpected token (105:21)
  103 |     },
  104 |     GameStart() {
> 105 |         this.level = ;
      |                      ^
  106 |         this.IsPause = false;
  107 |         this.IsOver = false;
  108 |         this.IsCanTap = true;
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3367:23)
    at Parser.pp$3.parseExpression (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3306:19)
2018-11-04T07:08:24.612Z - failed: [db-task][sync-changes] Failed to import asset /Users/upbins/CodeProject/CreatorProject/HardestGame/assets/scripts/game.js.js, message: Compile error: SyntaxError: /Users/upbins/CodeProject/CreatorProject/HardestGame/assets/scripts/game.js.js: Unexpected token (89:8)
  87 |         this.LimitNum = cc.instantiate(this.LimitNumPrefab)
  88 |         this.LimitNum.getComponent(cc.Sprite).spriteFrame = 
> 89 |         if (LevelUi) {
     |         ^
  90 |             this.node.addChild(LevelUi);
  91 |         }
  92 |         LevelUi.addChild(this.Bullet);
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3367:23)
    at Parser.pp$3.parseExpression (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3306:19)
